--- a/tags.html
+++ b/tags.html
@@ -47,7 +47,7 @@ permalink: /tags/
         <a href="#{{ tag[0] }}" class="color-apresentacao">{{ tag[0] }}</a>
       {% elsif tag[0] == "Poesia" %}
         <a href="#{{ tag[0] }}" class="color-poesia">{{ tag[0] }}</a>
-      {% elsif tag[0] == "Poesia" %}
+      {% elsif tag[0] == "MS" %}
         <a href="#{{ tag[0] }}" class="color-MS">{{ tag[0] }}</a>
       {% else %}
         <a href="#{{ tag[0] }}" class="color-default">{{ tag[0] }}</a>
