--- a/tags.html
+++ b/tags.html
@@ -17,6 +17,8 @@ permalink: /tags/
         <a href="#{{ tag[0] }}" class="tag-poesia">{{ tag[0] }}</a>
       {% elsif tag[0] == "MS" %}
         <a href="#{{ tag[0] }}" class="tag-MS">{{ tag[0] }}</a>
+        {% elsif tag[0] == "Artes" %}
+        <a href="#{{ tag[0] }}" class="tag-artes">{{ tag[0] }}</a>
       {% else %}
         <a href="#{{ tag[0] }}" class="tag-default">{{ tag[0] }}</a>
       {% endif %}
@@ -49,6 +51,8 @@ permalink: /tags/
         <a href="#{{ tag[0] }}" class="color-poesia">{{ tag[0] }}</a>
       {% elsif tag[0] == "MS" %}
         <a href="#{{ tag[0] }}" class="color-MS">{{ tag[0] }}</a>
+      {% elsif tag[0] == "Artes" %}
+        <a href="#{{ tag[0] }}" class="color-artes">{{ tag[0] }}</a>
       {% else %}
         <a href="#{{ tag[0] }}" class="color-default">{{ tag[0] }}</a>
       {% endif %}
