updated colors for tags

--- a/tags.html
+++ b/tags.html
@@ -17,8 +17,14 @@ permalink: /tags/
         <a href="#{{ tag[0] }}" class="tag-poesia">{{ tag[0] }}</a>
       {% elsif tag[0] == "MS" %}
         <a href="#{{ tag[0] }}" class="tag-MS">{{ tag[0] }}</a>
-        {% elsif tag[0] == "Artes" %}
+      {% elsif tag[0] == "Artes" %}
         <a href="#{{ tag[0] }}" class="tag-artes">{{ tag[0] }}</a>
+      {% elsif tag[0] == "RPG" %}
+        <a href="#{{ tag[0] }}" class="tag-RPG">{{ tag[0] }}</a>
+      {% elsif tag[0] == "CoC" %}
+        <a href="#{{ tag[0] }}" class="tag-CoC">{{ tag[0] }}</a>
+      {% elsif tag[0] == "Pantanal" %}
+        <a href="#{{ tag[0] }}" class="tag-Pantanal">{{ tag[0] }}</a>
       {% else %}
         <a href="#{{ tag[0] }}" class="tag-default">{{ tag[0] }}</a>
       {% endif %}
@@ -53,6 +59,12 @@ permalink: /tags/
         <a href="#{{ tag[0] }}" class="color-MS">{{ tag[0] }}</a>
       {% elsif tag[0] == "Artes" %}
         <a href="#{{ tag[0] }}" class="color-artes">{{ tag[0] }}</a>
+      {% elsif tag[0] == "RPG" %}
+        <a href="#{{ tag[0] }}" class="color-RPG">{{ tag[0] }}</a>
+      {% elsif tag[0] == "CoC" %}
+        <a href="#{{ tag[0] }}" class="color-CoC">{{ tag[0] }}</a>
+      {% elsif tag[0] == "Pantanal" %}
+        <a href="#{{ tag[0] }}" class="color-Pantanal">{{ tag[0] }}</a>
       {% else %}
         <a href="#{{ tag[0] }}" class="color-default">{{ tag[0] }}</a>
       {% endif %}
