added tags and colors for new post about guitar

--- a/tags.html
+++ b/tags.html
@@ -25,6 +25,8 @@ permalink: /tags/
         <a href="#{{ tag[0] }}" class="tag-CoC">{{ tag[0] }}</a>
       {% elsif tag[0] == "Pantanal" %}
         <a href="#{{ tag[0] }}" class="tag-Pantanal">{{ tag[0] }}</a>
+      {% elsif tag[0] == "Violão" %}
+        <a href="#{{ tag[0] }}" class="tag-Violao">{{ tag[0] }}</a>
       {% else %}
         <a href="#{{ tag[0] }}" class="tag-default">{{ tag[0] }}</a>
       {% endif %}
@@ -65,6 +67,8 @@ permalink: /tags/
         <a href="#{{ tag[0] }}" class="color-CoC">{{ tag[0] }}</a>
       {% elsif tag[0] == "Pantanal" %}
         <a href="#{{ tag[0] }}" class="color-Pantanal">{{ tag[0] }}</a>
+      {% elsif tag[0] == "Violão" %}
+        <a href="#{{ tag[0] }}" class="color-Violao">{{ tag[0] }}</a>
       {% else %}
         <a href="#{{ tag[0] }}" class="color-default">{{ tag[0] }}</a>
       {% endif %}
